# confluent-ai-hackday-2025-customer-ai

./: .gitignore  README.md  install_basic_deps.sh  pyproject.toml  requirements.txt  run.py  run.sh
data/sample/: sample_tickets.json
src/: main.py
src/ai/: response_generator.py
src/core/: jsonrpc.py  sentiment.py
src/schemas/: __init__.py  mock_schema_registry.py  schema_registry_client.py
src/streaming/: data_flow_manager.py  kafka_client.py  stream_lineage_monitor.py  topic_manager.py
src/ui/: dashboard.py
